sandbox/output
StringCalculatorTest.java:37: error: ';' expected
         thrown.expect(NumberFormatException.class)
                                                   ^
1 error
